--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-Q6EPWGR19H"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || []
-      function gtag() {
-        dataLayer.push(arguments)
-      }
-      gtag('js', new Date())
-
-      gtag('config', 'G-Q6EPWGR19H')
-    </script>
+   
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -35,7 +22,7 @@
     <meta name="twitter:image" content="https://iili.io/HWG1ile.png" />
     <meta
       name="twitter:creator"
-      content="Jack Underwood, Colt McNamara, and George Peeler"
+      content="Ryan McKay"
     />
     <meta name="msvalidate.01" content="8408E4FCAD1E2F8AD2920028A3F9DBF7" />
     <meta name="twitter:card" content="summary_large_image" />
