--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="Wordle but with Students!" />
     <meta name="twitter:title" content="Studentle | A Daily Word Game" />
-    <meta name="twitter:image" content="https://iili.io/HWG1ile.png" />
+    <meta name="twitter:image" content="<a href="https://freeimage.host/i/HycYDvf">
     <meta
       name="twitter:creator"
       content="Jack Underwood, Colt McNamara, and George Peeler"
