--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <meta name="msvalidate.01" content="8408E4FCAD1E2F8AD2920028A3F9DBF7" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="Wordle but with Students!" />
-    <meta name="twitter:title" content="Studentle | A Daily Word Game" />
+    <meta name="twitter:title" content="Studentle | A Daily Student Game" />
     <meta name="twitter:image" content="https://iili.io/HWG1ile.png" />
     <meta
       name="twitter:creator"
