--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="Wordle but with Students!" />
     <meta name="twitter:title" content="Studentle | A Daily Student Game" />
-    <meta name="twitter:image" content="https://iili.io/HycYDvf.md.png" />
+    <meta name="twitter:image" content="https://iili.io/HycYDvf.png" />
     <meta
       name="twitter:creator"
       content="Ryan McKay"
@@ -27,11 +27,11 @@
     <meta name="msvalidate.01" content="8408E4FCAD1E2F8AD2920028A3F9DBF7" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="Wordle but with Students!" />
-    <meta name="twitter:title" content="Studentle | A Daily Word Game" />
-    <meta name="twitter:image" content="<a href="https://iili.io/HycYDvf.md.png">
+    <meta name="twitter:title" content="Studentle | A Daily Student Game" />
+    <meta name="twitter:image" content="<a href="https://iili.io/HycYDvf.png">
     <meta
       name="twitter:creator"
-      content="Jack Underwood, Colt McNamara, and George Peeler"
+      content="Ryan McKay"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
